--- a/src/app/modules/admin/containers/users/users.component.html
+++ b/src/app/modules/admin/containers/users/users.component.html
@@ -3,23 +3,42 @@
     <h1 class="user__title">Usuarios</h1>
     <div class="user__container-search">
       <a class="btn-add-user" style="cursor: pointer" (click)="create()">
-        <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor"
-          class="bi bi-person-plus-fill btn-add-user__ico" viewBox="0 0 16 16">
-          <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
-          <path fill-rule="evenodd"
-            d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z" />
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="19"
+          height="19"
+          fill="currentColor"
+          class="bi bi-person-plus-fill btn-add-user__ico"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
+          />
+          <path
+            fill-rule="evenodd"
+            d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"
+          />
         </svg>
         <span class="btn-add-user__text"> AGREGAR USUARIO </span>
       </a>
       <label for="searchAxes" class="lbl-search-user">
-        <input class="lbl-search-user__input" id="searchAxes" type="text" [(ngModel)]="usuario"
-          (ngModelChange)="busca($event)" autocomplete="off" spellcheck="false" />
-        <img class="lbl-search-user__ico" src="../../../../../assets/icons/Search.svg"
-          alt="Icono de lupa para busqueda" />
+        <input
+          class="lbl-search-user__input"
+          id="searchAxes"
+          type="text"
+          [(ngModel)]="usuario"
+          (ngModelChange)="busca($event)"
+          autocomplete="off"
+          spellcheck="false"
+        />
+        <img
+          class="lbl-search-user__ico"
+          src="../../../../../assets/icons/Search.svg"
+          alt="Icono de lupa para busqueda"
+        />
       </label>
     </div>
     <section class="list-user">
-
       <div class="list-user__table">
         <!-- Position Column -->
         <div class="list-user__row">
@@ -31,25 +50,45 @@
           </div>
         </div>
 
-        <div class="list-user__row" *ngFor="let element of user ">
+        <div class="list-user__row" *ngFor="let element of user">
           <div class="list-user__cell list-user__cell--user">
             {{ element.nombre }}
           </div>
-          <div class="list-user__cell list-user__cell--user" >
+          <div class="list-user__cell list-user__cell--user">
             <p *ngFor="let c of centroAsignado(element)">
               {{ c }}
             </p>
           </div>
           <div class="list-user__cell list-user__cell--user">
-            {{tipoRol(element.rolNombre)}}
+            {{ tipoRol(element.rolNombre) }}
           </div>
           <div class="list-user__cell list-user__cell--acction">
             <a (click)="edit(element)">
-              <img class="list-user__ico-action list-user__ico-action--edit"
-                src="../../../../../assets/icons/Pencil.svg" alt="Icono de editar" matTooltip="Editar" />
+              <img
+                class="list-user__ico-action list-user__ico-action--edit"
+                src="../../../../../assets/icons/Pencil.svg"
+                alt="Icono de editar"
+                matTooltip="Editar"
+              />
             </a>
-            <img class="list-user__ico-action" src="../../../../../assets/icons/Trash.svg" alt="icono de Eliminar"
-              matTooltip="Borrar" (click)="onClickDelete(element.id)" />
+            <img
+              class="list-user__ico-action"
+              src="../../../../../assets/icons/Trash.svg"
+              alt="icono de Eliminar"
+              matTooltip="Borrar"
+              (click)="onClickDelete(element.id)"
+            />
+            <a
+              *ngIf="element.rolNombre === 'ROLE_USER'"
+              routerLink="log-de-actividades/{{ element.id }}"
+            >
+              <img
+                class="list-user__ico-action list-user__ico-action--edit"
+                src="../../../../../assets/icons/visibility.svg"
+                alt="Icono de Ver Log de actividades"
+                matTooltip="Log de actividades"
+              />
+            </a>
           </div>
         </div>
       </div>
@@ -58,22 +97,57 @@
         <p class="pagination-text">
           {{ initialItem }} - {{ finalItem }} de {{ listLenght }}
         </p>
-        <svg (click)="onClickBefore()" class="pagination-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M14 7L9 12L14 17V7Z" fill="black" fill-opacity="0.87" />
+        <svg
+          (click)="onClickBefore()"
+          class="pagination-arrow"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M14 7L9 12L14 17V7Z"
+            fill="black"
+            fill-opacity="0.87"
+          />
         </svg>
-        <svg (click)="onClickAfter()" class="pagination-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M10 7L15 12L10 17V7Z" fill="black" fill-opacity="0.87" />
+        <svg
+          (click)="onClickAfter()"
+          class="pagination-arrow"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M10 7L15 12L10 17V7Z"
+            fill="black"
+            fill-opacity="0.87"
+          />
         </svg>
       </div>
     </section>
   </div>
 
   <div *ngIf="flagNew" class="modal">
-    <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
+    <img
+      class="modal__btnClose"
+      (click)="close()"
+      src="../../../../../assets/icons/X.svg"
+      alt="icono de cerrar"
+    />
     <div class="modal__container">
-      <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
+      <img
+        class="modal__ico"
+        src="../../../../../assets/icons/Check.svg"
+        alt="icon check"
+      />
       <p class="modal__text">
         ¡El Usuario {{ data.nombreUsuario }} fue creado con éxito!
       </p>
@@ -81,9 +155,18 @@
   </div>
 
   <div *ngIf="flagEdited" class="modal">
-    <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
+    <img
+      class="modal__btnClose"
+      (click)="close()"
+      src="../../../../../assets/icons/X.svg"
+      alt="icono de cerrar"
+    />
     <div class="modal__container">
-      <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
+      <img
+        class="modal__ico"
+        src="../../../../../assets/icons/Check.svg"
+        alt="icon check"
+      />
       <p class="modal__text">
         ¡El Usuario {{ data.nombreUsuario }} fue editado con éxito!
       </p>
@@ -92,8 +175,11 @@
 
   <div *ngIf="flagDelete" class="modal-delete">
     <div class="modal__container-delete">
-      <img class="modal__ico-info" src="../../../../../assets/icons/Exclamation-triangle.svg"
-        alt="Icono de información" />
+      <img
+        class="modal__ico-info"
+        src="../../../../../assets/icons/Exclamation-triangle.svg"
+        alt="Icono de información"
+      />
       <p class="modal__text">
         ¡Estas a punto de eliminar este dato!<br />Esta acción no podrá ser
         revertida
