--- a/src/app/modules/admin/containers/activity-log/activity-log.component.html
+++ b/src/app/modules/admin/containers/activity-log/activity-log.component.html
@@ -1,1 +1,73 @@
-<p>activity-log works!</p>
+<section class="container-activity">
+  <div class="activity">
+    <h1 class="activity__title">Histórico de Actividades</h1>
+    <h2 class="activity__subtitle">{{ userAsig.nombre }}</h2>
+
+    <section class="list-activity">
+      <div class="list-activity__table">
+        <!-- Position Column -->
+        <div class="list-activity__row">
+          <p class="list-activity__header">Actividad</p>
+          <p class="list-activity__header list-activity__header--date">
+            Fecha y Hora
+          </p>
+        </div>
+
+        <div
+          class="list-activity__row"
+          *ngFor="let element of listOfActivity_toShow | async"
+        >
+          <p class="list-activity__cell">
+            {{ element.actividad }}
+          </p>
+
+          <div class="list-activity__cell--date">
+            {{ element.fechaHora.substring(8, 10) }}/{{
+              element.fechaHora.substring(5, 7)
+            }}/{{ element.fechaHora.substring(0, 4) }} a las
+            {{ element.fechaHora.substring(11, 16) }}
+          </div>
+        </div>
+      </div>
+      <div class="pagination">
+        <p class="pagination-text">
+          {{ initialItem }} - {{ finalItem }} de {{ listLenght }}
+        </p>
+        <svg
+          (click)="onClickBefore()"
+          class="pagination-arrow"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M14 7L9 12L14 17V7Z"
+            fill="black"
+            fill-opacity="0.87"
+          />
+        </svg>
+        <svg
+          (click)="onClickAfter()"
+          class="pagination-arrow"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M10 7L15 12L10 17V7Z"
+            fill="black"
+            fill-opacity="0.87"
+          />
+        </svg>
+      </div>
+    </section>
+  </div>
+</section>
