Refactor: elimina console.logs de user y list comparative

--- a/src/app/modules/admin/containers/users/users.component.html
+++ b/src/app/modules/admin/containers/users/users.component.html
@@ -80,13 +80,13 @@
             />
             <a
               *ngIf="element.rolNombre === 'ROLE_USER'"
-              routerLink="log-de-actividades/{{ element.id }}"
+              routerLink="historial-de-actividades/{{ element.id }}"
             >
               <img
                 class="list-user__ico-action list-user__ico-action--edit"
                 src="../../../../../assets/icons/visibility.svg"
-                alt="Icono de Ver Log de actividades"
-                matTooltip="Log de actividades"
+                alt="Icono de Ver historial de actividades"
+                matTooltip="Historial de actividades"
               />
             </a>
           </div>
