Refactor: muestra en pantalla el nombre de reporte y de centro en lista de actividades

--- a/src/app/modules/admin/containers/activity-log/activity-log.component.html
+++ b/src/app/modules/admin/containers/activity-log/activity-log.component.html
@@ -19,6 +19,11 @@
         >
           <p class="list-activity__cell">
             {{ element.actividad }}
+            <span class="list-activity__span" *ngIf="element.nombreReporte">
+              "{{ element.nombreReporte }}" de centro "{{
+                element.nombreCentro
+              }}"</span
+            >
           </p>
 
           <div class="list-activity__cell--date">
