--- a/src/app/modules/admin/containers/activity-log/activity-log.component.scss
+++ b/src/app/modules/admin/containers/activity-log/activity-log.component.scss
@@ -70,16 +70,20 @@ p {
             font-size: 1em;
             line-height: 1.1875em;
             color: #000000;
-            transition: all 0.1s linear;
             &:first-of-type {
               padding-left: 1.5em;
+            }
+            .list-activity__span {
+              font-family: "Inter" !important;
+              font-size: 1em;
+              line-height: 1.1875em;
+              color: #000000;
             }
           }
           .list-activity__cell--date {
             padding-right: 24px;
             display: flex;
             justify-content: flex-end;
-            transition: all 0.1s linear;
           }
         }
       }
