Style: Cambia grid, agrega una seccion mas con 1fr para mostrar el usuario asignado

--- a/src/app/modules/admin/containers/centers/centers.component.scss
+++ b/src/app/modules/admin/containers/centers/centers.component.scss
@@ -99,8 +99,7 @@
           margin-bottom: 8px;
           padding: 0 1.5em;
           display: grid;
-          grid-template-columns: 1fr 1fr 1fr;
-          justify-items: center;
+          grid-template-columns: 1fr 1fr 1fr 1fr;
           align-items: center;
 
           .list-center__header {
