--- a/src/app/core/layouts/components/navbar/navbar.component.scss
+++ b/src/app/core/layouts/components/navbar/navbar.component.scss
@@ -188,8 +188,8 @@
       width: 168px;
       height: 59px;
       background: #ffffff;
-      color: #083d5e;
-      border: 1px solid #083d5e;
+      color: #121212;
+      border: 1px solid black;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       border-radius: 35px;
       font-size: 20px;
@@ -199,9 +199,9 @@
     .btn-modal__accept {
       width: 168px;
       height: 59px;
-      color: #e60d0d;
+      color: #121212;
       background: #ffffff;
-      border: 1px solid #c70f0f;
+      border: 1px solid black;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       border-radius: 35px;
       font-size: 20px;
