--- a/src/app/modules/admin/containers/am-user/am-user.component.scss
+++ b/src/app/modules/admin/containers/am-user/am-user.component.scss
@@ -1,189 +1,195 @@
 @import "../../../../../styles/variables.scss";
 
 .container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    padding-left: 123px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  padding-left: 123px;
 }
 
 .container-title {
-    font-size: 30px;
-    line-height: 43px;
-    color: $color-text-primary;
-    margin-top: 45px;
-    margin-bottom: 32px;
-    align-self: center;
+  font-size: 30px;
+  line-height: 43px;
+  color: $color-text-primary;
+  margin-top: 45px;
+  margin-bottom: 32px;
+  align-self: center;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 10px;
-    gap: 12px;
-    left: 40.22%;
-    right: 22.45%;
-    top: 25.69%;
-    bottom: 37.51%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 10px;
+  gap: 12px;
+  left: 40.22%;
+  right: 22.45%;
+  top: 25.69%;
+  bottom: 37.51%;
 
-    background: #ffffff;
+  background: #ffffff;
 }
 
 section {
-    width: 549px;
-    height: 83px;
-    margin-bottom: 12px;
+  width: 549px;
+  height: 83px;
+  margin-bottom: 12px;
 }
 
 label {
-    width: 280px;
-    font-family: "Futura Bk BT";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 19px;
-    color: #000000;
-    margin-top: 10px;
+  width: 280px;
+  font-family: "Futura Bk BT";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+  margin-top: 10px;
 }
 
 input {
-    width: 549px;
-    height: 56px;
-    bottom: 22.22%;
-    border-color: #92cdef;
-    border-top-color: aqua;
-    border-left-color: aqua;
-    border-radius: 4px;
-    border-width: 1px;
-    background: #ffffff;
-    font-family: "Futura Bk BT";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    color: #000000;
-    margin-top: 10px;
-    padding: 10px;
-    outline-color: #007ac196;
+  width: 549px;
+  height: 56px;
+  bottom: 22.22%;
+  border-color: #92cdef;
+  border-top-color: aqua;
+  border-left-color: aqua;
+  border-radius: 4px;
+  border-width: 1px;
+  background: #ffffff;
+  font-family: "Futura Bk BT";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+  margin-top: 10px;
+  padding: 10px;
+  outline-color: #007ac196;
 }
 
 .containerPassword {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
-
+.container-rolMDP {
+  margin-top: 20px;
+}
 .labelDatoObligatorio {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 16px;
-    letter-spacing: 0.4px;
-    color: rgba(0, 0, 0, 0.6);
-    margin-left: 10px;
-    margin-bottom: 10px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.4px;
+  color: rgba(0, 0, 0, 0.6);
+  margin-left: 10px;
+  margin-bottom: 10px;
 }
 
 .sectionCheckbox {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .container-checkbox {
-    margin-left: 72px;
-    margin-top: 20px;
-    width: 387.16px;
-    height: 111px;
-    margin-bottom: 20px;
+  margin-left: 72px;
+  margin-top: 20px;
+  width: 387.16px;
+  height: 111px;
+  margin-bottom: 20px;
 }
 
 .mat-radio-button {
-    margin-top: 10px;
-    margin-left: 50px;
-
+  margin-top: 10px;
+  margin-left: 50px;
 }
 
 .mat-radio-button-centro {
-    margin-left: 100px !important;
+  margin-left: 100px !important;
 }
 
 ::ng-deep .mat-radio-button.mat-accent {
-    &.mat-radio-checked .mat-radio-outer-circle {
-        border-color: #5600E8;
-    }
+  &.mat-radio-checked .mat-radio-outer-circle {
+    border-color: #5600e8;
+  }
 
-    .mat-radio-inner-circle {
-        color: #5600E8;
-        background-color: #5600E8;
-    }
+  .mat-radio-inner-circle {
+    color: #5600e8;
+    background-color: #5600e8;
+  }
 
-    .mat-radio-ripple .mat-ripple-element {
-        background-color: #5600E8 !important;
-    }
+  .mat-radio-ripple .mat-ripple-element {
+    background-color: #5600e8 !important;
+  }
 }
 
 .container-select {
-    margin-top: 20px;
+  margin-top: 20px;
+  margin-bottom: 0;
 }
 
 .mat-select {
-    background: #92cdef;
-    box-sizing: border-box;
-    border: 1px solid #79747e;
-    border-radius: 4px;
-    width: 299px;
-    height: 56px;
+  background: #92cdef;
+  box-sizing: border-box;
+  border: 1px solid #79747e;
+  border-radius: 4px;
+  width: 299px;
+  height: 56px;
 
-    //background-image: url("data:image/svg+xml;utf8,<svg fill='grey' height='25' viewBox='0 0 24 24' width='25' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
-    background-repeat: no-repeat;
-    background-position-x: 95%;
-    background-position-y: 15px;
+  //background-image: url("data:image/svg+xml;utf8,<svg fill='grey' height='25' viewBox='0 0 24 24' width='25' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+  background-repeat: no-repeat;
+  background-position-x: 95%;
+  background-position-y: 15px;
 
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -o-appearance: none;
-    appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  appearance: none;
 
-    font-family: "Futura Bk BT";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    /* identical to box height, or 150% */
+  font-family: "Futura Bk BT";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height, or 150% */
 
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    letter-spacing: 0.5px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  letter-spacing: 0.5px;
 
-    /* M3/sys/light/on-surface */
+  /* M3/sys/light/on-surface */
 
-    color: #1c1b1f;
+  color: #1c1b1f;
 }
 
 .mat-select::-ms-expand {
-    display: none;
-    /*Evita que se muestre la flecha por defecto en versiones de IE*/
+  display: none;
+  /*Evita que se muestre la flecha por defecto en versiones de IE*/
+}
+
+.mat-select::-moz-selection {
+  background-color: #ffffff;
 }
 
 .mat-select::selection {
-    background-color: #ffffff;
+  background-color: #ffffff;
 }
 
 .mat-option {
-    background-color: white;
+  background-color: white;
 }
 
 .mat-button {
-    height: 70px;
-    width: 168px;
-    left: 594px;
-    top: 32px;
-    border-radius: 35px;
-    background: #92CDEF !important;
-    font-family: 'Futura Bk BT' !important;
-    font-style: normal !important;
-    font-weight: 600 !important;
-    font-size: 16px !important;
-    line-height: 24px !important;
+  height: 70px;
+  width: 168px;
+  left: 594px;
+  top: 32px;
+  border-radius: 35px;
+  background: #92cdef !important;
+  font-family: "Futura Bk BT" !important;
+  font-style: normal !important;
+  font-weight: 600 !important;
+  font-size: 16px !important;
+  line-height: 24px !important;
 }
