Refactor: cambia tipoRol() para mostrar el rol mas el rol en mdp segun corresponda

--- a/src/app/modules/admin/containers/users/users.component.html
+++ b/src/app/modules/admin/containers/users/users.component.html
@@ -60,7 +60,7 @@
             </p>
           </div>
           <div class="list-user__cell list-user__cell--user">
-            {{ tipoRol(element.rolNombre) }}
+            {{ tipoRol(element) }}
           </div>
           <div class="list-user__cell list-user__cell--acction">
             <a (click)="edit(element)">
