--- a/src/app/modules/admin/containers/list-comparative-reports/list-comparative-reports.component.scss
+++ b/src/app/modules/admin/containers/list-comparative-reports/list-comparative-reports.component.scss
@@ -66,7 +66,7 @@ p {
           }
           .list-reports__header--date {
             justify-self: flex-end;
-            padding-right: 24px;
+            padding-right: 55px;
           }
           .list-reports__cell {
             font-family: "Inter" !important;
@@ -88,10 +88,18 @@ p {
           }
 
           .list-reports__cell--action {
-            padding-right: 60px;
             display: flex;
             justify-content: flex-end;
+            align-items: center;
             transition: all 0.1s linear;
+            .list-reports__action-ico {
+              width: 36px;
+              height: 36px;
+              padding: 6px;
+              margin-left: 60px;
+              cursor: pointer;
+              border-radius: 10px;
+            }
           }
         }
         .list-reports__row--click {
@@ -111,6 +119,18 @@ p {
 
             .list-reports__cell--action {
               color: #ffffff;
+              .list-reports__action-ico {
+                transition: all 0.1s linear;
+                path {
+                  fill: white;
+                }
+                &:hover {
+                  background-color: #ffffff;
+                  path {
+                    fill: $color-bg-hover-primary;
+                  }
+                }
+              }
             }
           }
         }
