Fix: arregla problema de paginacion de usuarios

--- a/src/app/modules/admin/containers/users/users.component.html
+++ b/src/app/modules/admin/containers/users/users.component.html
@@ -50,7 +50,7 @@
           </div>
         </div>
 
-        <div class="list-user__row" *ngFor="let element of user">
+        <div class="list-user__row" *ngFor="let element of listOfUsers_toShow | async">
           <div class="list-user__cell list-user__cell--user">
             {{ element.nombre }}
           </div>
