--- a/src/app/modules/admin/containers/reports/reports.component.scss
+++ b/src/app/modules/admin/containers/reports/reports.component.scss
@@ -435,8 +435,8 @@
       }
 
       .label-centros {
-        width: 15%;
-        height: 20.18px;
+        padding: 2px 8px;
+        margin-bottom: 5px;
         border: 1px solid #1967d2;
         border-radius: 30px;
         // text-align: center;
@@ -519,7 +519,7 @@
   position: absolute;
   left: 50%;
   // top: 50%;
-  transform: translate(-50%, -60%);
+  transform: translate(-50%, -105%);
   z-index: 1001;
   box-shadow: rgba(0, 0, 0, 0.4) 10px 10px 4px;
   background: white;
