Refactor: cambia titulo

--- a/src/app/modules/user/containers/sending-report/sending-report.component.html
+++ b/src/app/modules/user/containers/sending-report/sending-report.component.html
@@ -1,6 +1,6 @@
 <section class="container-report">
   <div class="report">
-    <h1 class="report__title">Reportes Recibidos</h1>
+    <h1 class="report__title">Reportes Enviados</h1>
     <div class="report__container-search">
       <label for="searchReport" class="lbl-search-report">
         <input
