Style: cambia margin de radio-group

--- a/src/app/modules/admin/containers/variables-show/variables-show.component.scss
+++ b/src/app/modules/admin/containers/variables-show/variables-show.component.scss
@@ -56,7 +56,8 @@
 
         .value-scale__radio-group {
             // padding: 0 30px;
-            margin: 10px;
+            margin-top: 10px;
+            margin-bottom: 10px;
             flex-direction: column-reverse;
 
             .value-scale__radio-btn {
