Feat: Agrega modal de exito al enviar reporte

--- a/src/app/modules/user/containers/sending-report/sending-report.component.html
+++ b/src/app/modules/user/containers/sending-report/sending-report.component.html
@@ -90,4 +90,9 @@
       </div>
     </section>
   </div>
+  <app-modal-alert
+    [flag]="flagCreatedReport"
+    type="success"
+    [modalText]="modalText"
+  ></app-modal-alert>
 </section>
