Feat: Agrega modal para indicar si el reporte aun no termina el periodo a reportar
De esta forma el usuario no puede enviar el reporte antes de cumplir el periodo

--- a/src/app/modules/user/components/report-upload/report-upload.component.html
+++ b/src/app/modules/user/components/report-upload/report-upload.component.html
@@ -99,4 +99,10 @@
       </div>
     </div>
   </div>
+  <!-- MODAL DE AÚN NO COMPLETA EL PERIODO A REPORTAR  -->
+  <app-modal-alert
+    [flag]="flagRequireDate"
+    type="alert"
+    [modalText]="modalText"
+  ></app-modal-alert>
 </section>
