Feat: Implementa endpoint de obtener centro para mostrar nombre en titulo de tabla comparativa

--- a/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
+++ b/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
@@ -1,6 +1,6 @@
 <section class="container-comparative-table">
   <div class="table">
-    <h1 class="table__title">Cuadro Comparativo Centro la Balsa</h1>
+    <h1 class="table__title">Cuadro Comparativo {{ center.nombre }}</h1>
     <header class="header">
       <div class="header__container">
         <h4 class="header__report">Reporte L00005</h4>
