Feat: ahora muestra la nombre de variable correctamente

--- a/src/app/modules/admin/containers/evolution-of-variable/evolution-of-variable.component.html
+++ b/src/app/modules/admin/containers/evolution-of-variable/evolution-of-variable.component.html
@@ -3,7 +3,7 @@
         <h1>Evolución de Variable</h1>
     </div>
     <div class="container-ejes-variables">
-        <label class="ejes-preview">Cantidad de participantes</label>
+        <label class="ejes-preview">{{name}}</label>
         <div class="variables-preview"></div>
         <apx-chart [series]="series" [chart]="chart" [title]="title" [xaxis]="xaxis" [markers]="markers"
             [colors]="colors" [stroke]="stroke" [grid]="grid"></apx-chart>
