--- a/src/app/modules/admin/containers/users/users.component.scss
+++ b/src/app/modules/admin/containers/users/users.component.scss
@@ -97,8 +97,9 @@
           min-height: 48px;
           margin-bottom: 8px;
           padding-left: 1.5em;
-          display: flex;
-          justify-content: space-between;
+          padding-right: 1.5em;
+          display: grid;
+          grid-template-columns: repeat(4, 1fr);
           align-items: center;
 
           .list-user__header {
@@ -114,15 +115,18 @@
           }
 
           .list-user__header--action {
-            width: 153px;
+            justify-self: flex-end;
+            padding-right: 79px;
           }
 
           .list-user__cell--acction {
-            width: 153px;
             height: 50px;
             display: flex;
             align-items: center;
-
+            justify-self: flex-end;
+            .list-user__ico-hidden {
+              visibility: hidden;
+            }
             .list-user__ico-action {
               padding: 0.625em 0.625em 0.625em 0;
               margin-right: 1.0625em;
@@ -134,14 +138,9 @@
             }
           }
           .list-user__cell--user {
-            min-width: 297px;
             p {
               margin-bottom: 0;
             }
-          }
-          .list-user__cell--usermiddle {
-            padding-right: 60px;
-            min-width: 339px;
           }
           .list-user__cell {
             font-family: "Inter" !important;
