--- a/src/app/core/layouts/components/navbar/navbar.component.html
+++ b/src/app/core/layouts/components/navbar/navbar.component.html
@@ -185,9 +185,9 @@
     <!-- Ayuda -->
     <li class="navbar__item">
       <a
-        routerLink="dashboard/ayuda"
+        href="https://sites.google.com/view/manual-mdp-adm/inicio"
+        target="_blank"
         class="navbar__link"
-        routerLinkActive="activeRoute"
       >
         <img
           class="navbar__ico-list"
