--- a/src/app/modules/admin/containers/axes/axes.component.scss
+++ b/src/app/modules/admin/containers/axes/axes.component.scss
@@ -83,7 +83,7 @@
         border-spacing: 0px 8px;
         .list-axes__row {
           box-shadow: 0 2px 2px #00000040;
-          height: 48px;
+          min-height: 48px;
           margin-bottom: 8px;
           padding-left: 1.5em;
           display: flex;
