--- a/src/app/modules/admin/containers/centers/centers.component.scss
+++ b/src/app/modules/admin/containers/centers/centers.component.scss
@@ -95,7 +95,7 @@
 
         .list-center__row {
           box-shadow: 0 2px 2px #00000040;
-          height: 48px;
+          min-height: 48px;
           margin-bottom: 8px;
           padding: 0 1.5em;
           display: grid;
