--- a/src/app/modules/admin/containers/variables/variables.component.scss
+++ b/src/app/modules/admin/containers/variables/variables.component.scss
@@ -88,7 +88,6 @@ p {
           transition: all 0.1s linear;
           cursor: pointer;
           &:hover {
-            // background-color: #ececec;
             background-color: $color-bg-hover-primary;
 
             .list-variables__cell {
@@ -109,8 +108,9 @@ p {
           height: 56px;
           padding-top: 8px;
           padding-left: 1.5em;
-          display: flex;
-          justify-content: space-between;
+          padding-right: 1.5em;
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
           align-items: center;
           .list-variables__header {
             text-align: start;
@@ -123,10 +123,10 @@ p {
             }
           }
           .list-variables__header--quantity {
-            padding-right: 86px;
+            justify-self: center;
           }
           .list-variables__cell {
-            min-width: 300px;
+            // min-width: 300px;
             font-family: "Inter" !important;
             font-size: 1em;
             line-height: 1.1875em;
@@ -141,17 +141,12 @@ p {
             font-size: 1em;
             line-height: 1.1875em;
             color: #000000;
-            height: 50px;
-            display: flex;
-            align-items: center;
             transition: all 0.1s linear;
-            padding-right: 30px;
+            justify-self: center;
           }
           .list-variables__cell--action {
-            padding-right: 20px;
-            min-width: 300px;
-            display: flex;
-            justify-content: flex-end;
+            padding-right: 24px;
+            justify-self: flex-end;
             transition: all 0.1s linear;
           }
         }
@@ -296,18 +291,7 @@ p {
       margin-left: 7.9375em;
       .variables__title {
         margin-top: 40px;
-        padding-right: 57px; //centra el titulo alineado con el logo del header
-      }
-      .list-variables__table {
-        .list-variables__row {
-          .list-variables__header--quantity {
-            padding-right: 136px !important;
-          }
-
-          .list-variables__cell--quantity {
-            padding-right: 79px;
-          }
-        }
+        // padding-right: 57px; //centra el titulo alineado con el logo del header
       }
     }
   }
