--- a/src/app/modules/admin/containers/centers/centers.component.scss
+++ b/src/app/modules/admin/containers/centers/centers.component.scss
@@ -276,9 +276,9 @@
     .btn-modal__accept {
       width: 168px;
       height: 59px;
-      color: #e60d0d;
+      color: #083d5e;
       background: #ffffff;
-      border: 1px solid #c70f0f;
+      border: 1px solid #083d5e;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       border-radius: 35px;
       font-size: 16px;
