--- a/src/app/modules/admin/containers/variables-group/variables-group.component.scss
+++ b/src/app/modules/admin/containers/variables-group/variables-group.component.scss
@@ -288,9 +288,9 @@ p {
     .btn-modal__accept {
       width: 168px;
       height: 59px;
-      color: #e60d0d;
+      color: #083d5e;
       background: #ffffff;
-      border: 1px solid #c70f0f;
+      border: 1px solid #083d5e;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       border-radius: 35px;
       font-size: 16px;
@@ -301,66 +301,66 @@ p {
   }
 }
 
-.modal-selectCenter{
+.modal-selectCenter {
   position: fixed;
   width: 406px;
   height: 409px;
   z-index: 901;
-  background: #FFFFFF;
-  border: 1px solid #79747E;
+  background: #ffffff;
+  border: 1px solid #79747e;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   top: 221px;
 
-    .close {
-      display: flex;
-      justify-content: flex-end;
-      margin-top: 13px;
-      margin-right: 14px;
-    }
+  .close {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 13px;
+    margin-right: 14px;
+  }
 
-    .icon {
-        color: grey;
-    }
+  .icon {
+    color: grey;
+  }
 
-    .icon:hover {
-        color: #1967D2;
-    }
-    .text-modal{
-      margin-top: 27px;
-      font-family: 'Futura Md BT';
+  .icon:hover {
+    color: #1967d2;
+  }
+  .text-modal {
+    margin-top: 27px;
+    font-family: "Futura Md BT";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    letter-spacing: 0.25px;
+    color: #3d3b3f;
+  }
+  .container-select {
+    justify-content: center;
+    display: flex;
+  }
+  .container-button {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 52px;
+    margin-top: 163px;
+
+    .modal-button {
+      color: white;
+      height: 32px;
+      width: 108px;
+      border-radius: 10px;
+      background: #083d5e;
+      font-family: "Futura Bk BT";
       font-style: normal;
       font-weight: 400;
-      font-size: 24px;
+      font-size: 15px;
       line-height: 20px;
-      display: flex;
-      justify-content: center;
-      text-align: center;
-      letter-spacing: 0.25px;
-      color: #3D3B3F;
     }
-    .container-select{
-      justify-content: center;
-      display: flex;
-    }
-    .container-button{
-      display: flex;
-      justify-content: flex-end;
-      margin-right: 52px;
-      margin-top: 163px;
-
-      .modal-button{
-        color: white;
-        height: 32px;
-        width: 108px;
-        border-radius: 10px;
-        background: #083D5E;
-        font-family: 'Futura Bk BT';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 15px;
-        line-height: 20px;
-      }
-    }
+  }
 }
 
 .overlay {
@@ -381,7 +381,7 @@ p {
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   border: 1px solid rgba(8, 61, 94, 1);
-  background: #FFFFFF;
+  background: #ffffff;
   width: 224px;
   height: 48px;
   font-family: "Futura Bk BT";
@@ -406,8 +406,8 @@ p {
 }
 
 mat-option {
-  border-bottom: 0.3px solid #79747E;
-  height: 35px !important; 
+  border-bottom: 0.3px solid #79747e;
+  height: 35px !important;
 }
 
 ::ng-deep .mat-option-text {
@@ -415,10 +415,10 @@ mat-option {
 }
 
 ::ng-deep .mat-select-panel {
-  background: #CCE8F4;
+  background: #cce8f4;
   margin-top: 40px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border: 1px solid #083D5E;
+  border: 1px solid #083d5e;
   border-radius: 10px !important;
   font-weight: 600;
 }
@@ -449,7 +449,7 @@ mat-option {
 
 ::ng-deep .mat-select-panel::-webkit-scrollbar:vertical {
   width: 11px;
-  background-color:   gray;
+  background-color: gray;
   color: gray;
   background: rgba(255, 255, 255, 0.849);
   border-radius: 10px !important;
