Feat: Agrega link a manual de usuario d centro

--- a/src/app/core/layouts/components/user-navbar/user-navbar.component.html
+++ b/src/app/core/layouts/components/user-navbar/user-navbar.component.html
@@ -148,9 +148,9 @@
     <!-- Ayuda -->
     <li class="navbar__item">
       <a
-        routerLink="dashboard/ayuda"
+        href="https://sites.google.com/view/manual-mdp-dcentro/inicio"
+        target="_blank"
         class="navbar__link"
-        routerLinkActive="activeRoute"
       >
         <img
           class="navbar__ico-list"
