--- a/src/app/modules/auth/containers/login/login.component.html
+++ b/src/app/modules/auth/containers/login/login.component.html
@@ -5,8 +5,8 @@
       src="../../../../../assets/images/logo-MDP.svg"
       alt="Logo Mensajeros de la Paz"
     />
-    <section class="login" >
-      <form [formGroup]="loginForm" action="" class="login__form" >
+    <section class="login">
+      <form [formGroup]="loginForm" action="" class="login__form">
         <h2 class="login__h1">INICIAR SESIÓN</h2>
         <label class="login__label" for="user">USUARIO</label>
         <input
@@ -14,23 +14,62 @@
           type="email"
           id="user"
           placeholder="forexample@mdp.com"
-          formControlName ="email"
+          formControlName="email"
         />
         <label class="login__label" for="password">CONTRASEÑA</label>
-        <input
-          class="login__input"
-          type="password"
-          id="password"
-          placeholder="Más de 8 caracteres"
-          formControlName ="contrasena"
-        />
+        <div class="login__input-container">
+          <input
+            class="login__input"
+            type="password"
+            id="password"
+            placeholder="Más de 8 caracteres"
+            formControlName="contrasena"
+          />
+
+          <svg
+            class="login__input-ico-eye"
+            version="1.1"
+            id="Capa_1"
+            x="0px"
+            y="0px"
+            viewBox="0 0 612 612"
+            style="enable-background: new 0 0 612 612"
+            xml:space="preserve"
+          >
+            <g>
+              <g>
+                <path
+                  d="M609.608,315.426c3.19-5.874,3.19-12.979,0-18.853c-58.464-107.643-172.5-180.72-303.607-180.72
+			S60.857,188.931,2.393,296.573c-3.19,5.874-3.19,12.979,0,18.853C60.858,423.069,174.892,496.147,306,496.147
+			S551.143,423.069,609.608,315.426z M306,451.855c-80.554,0-145.855-65.302-145.855-145.855S225.446,160.144,306,160.144
+			S451.856,225.446,451.856,306S386.554,451.855,306,451.855z"
+                />
+                <path
+                  d="M306,231.67c-6.136,0-12.095,0.749-17.798,2.15c5.841,6.76,9.383,15.563,9.383,25.198c0,21.3-17.267,38.568-38.568,38.568
+			c-9.635,0-18.438-3.541-25.198-9.383c-1.401,5.703-2.15,11.662-2.15,17.798c0,41.052,33.279,74.33,74.33,74.33
+			s74.33-33.279,74.33-74.33S347.052,231.67,306,231.67z"
+                />
+              </g>
+            </g>
+          </svg>
+        </div>
         <mat-error *ngIf="flag">Email y/o contraseña incorrecto</mat-error>
         <mat-error *ngIf="flag2">Error en el servidor</mat-error>
         <mat-checkbox class="login__recordar-usuario" color="primary">
           Recordar usuario y contraseña</mat-checkbox
         >
-        <a routerLink="/auth/forgot-password" class="login__recuperar-contrasena">Olvidé mi contraseña</a>
-        <button mat-raised-button class="login__btn-ingresar" color="primary" type="submit" (click)="onLogin()" >
+        <a
+          routerLink="/auth/forgot-password"
+          class="login__recuperar-contrasena"
+          >Olvidé mi contraseña</a
+        >
+        <button
+          mat-raised-button
+          class="login__btn-ingresar"
+          color="primary"
+          type="submit"
+          (click)="onLogin()"
+        >
           Ingresar
         </button>
       </form>
