Style: cambia background y border de mat-select

--- a/src/app/modules/admin/containers/am-user/am-user.component.scss
+++ b/src/app/modules/admin/containers/am-user/am-user.component.scss
@@ -129,9 +129,9 @@ input {
 }
 
 .mat-select {
-  background: #92cdef;
+  background: white;
   box-sizing: border-box;
-  border: 1px solid #79747e;
+  border: 1px solid #92cdef;
   border-radius: 4px;
   width: 299px;
   height: 56px;
